# TFG-GOLEM-XIV

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: db-migration.yml  deploy-backend.yml  deploy-practice-correction-queue-worker.yml  main_golemxiv-api.yml  migrate-db.yml  practice-correction-worker-app-AutoDeployTrigger-fd05d46f-8a25-462b-af5c-96f0e3ee8f16.yml
PracticeCorrectionQueueWorker/: .env  pyproject.toml  rpc_client.py  worker.py
PracticeCorrectionQueueWorker/core/: config.py  db.py  logging_config.py
PracticeCorrectionQueueWorker/models/: PracticesUsersLink.py  __init__.py  practice.py
PracticeCorrectionQueueWorker/services/: rpc_client.py
backend/: .gitignore  Dockerfile  alembic.ini  code.py  gunicorn.conf.py  main.py  plantilla_alumnes.xlsx  pyproject.toml  requirements.txt  start.sh
dummy/: .env  Dockerfile  requirements.txt  server.py
dummy_practices_correction_server/: .gitignore  pyproject.toml  server.py
frontend/: .eslintrc.json  middleware.ts  package-lock.json  package.json
frontend_to_migrate/: Dockerfile
mock_practices_correction_server/: handlers.py  main.py  pyproject.toml  server.py
notificaciones/: Dockerfile  notificaciones_server.py
practice_correction_queue_worker/: .gitignore  Dockerfile  pyproject.toml  requirements.txt  worker.py
practice_correction_queue_worker/core/: config.py  db.py
practice_correction_queue_worker/models/: PracticesUsersLink.py  practice.py  user.py
practice_correction_queue_worker/services/: rpc_client.py
queueWorker/: Dockerfile  worker.py  worker_v2.py
(+163 files in other folders)
